8269746: C2: assert(!in->is_CFG()) failed: CFG Node with no controlling input?

Reviewed-by: chagedorn, thartmann